<resources>
    <string name="app_name">Calculation</string>
    <string name="but_name">Calculate</string>
    <string name="number1">Number1</string>
    <string name="number2">Number2</string>
    <string name="calc">Calculation</string>
    <string name="toast">Toast and Dialog</string>
    <string name="logo">Simple Text</string>
    <string name="toast_btn">Toast</string>
    <string name="alert">Alert</string>
    <string name="dialog">Dialog</string>
    <string name="image">Image</string>
    <string name="sorry">Sorry</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>